force-app/main/default/objects/Order_Batch_Item__c/Order_Batch_Item__c.object-meta.xml
<CustomObject>
    <label>Order Batch Item</label>
    <nameField>
        <displayFormat>BA-{0000}</displayFormat>
        <label>Order Batch Item  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Batch Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>