force-app/main/default/objects/Order_Batch_Item__c/fields/Batch__c.field-meta.xml
<CustomField>
    <fullName>Batch__c</fullName>
    <label>Batch</label>
    <length>200</length>
    <type>Text</type>
</CustomField>