force-app/main/default/objects/Order_Batch_Item__c/fields/Block_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Block_Quantity__c</fullName>
    <label>Block Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>