force-app/main/default/objects/Order_Batch_Item__c/fields/Eid__c.field-meta.xml
<CustomField>
    <fullName>Eid__c</fullName>
    <externalId>true</externalId>
    <label>Eid</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>