force-app/main/default/objects/Order_Batch_Item__c/fields/Order_Product__c.field-meta.xml
<CustomField>
    <fullName>Order_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Order Batch Items</relationshipLabel>
    <relationshipName>Order_Batch_Items</relationshipName>
    <type>Lookup</type>
</CustomField>