force-app/main/default/objects/Order_Batch_Item__c/fields/Warehouse_Code__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Code__c</fullName>
    <label>Warehouse Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>